# telegram_bot

./: .env  .gitignore  AWS Deploy Tutorial.md  Database Design.md  Database Design.txt  First design.md  Google Sheet API Trial.ipynb  Progress_Report.md  README.md  Test.ipynb  deepseek_llm.py  docker_tutorial.md  index.html  logging_config.yml  persistant_conversation_bot.py  pyproject.toml  reference_link.txt  requirements.txt  telegram_bot_echo_function.py  telegram_bot_keyboard_n_button_reply.py  telegram_with_LLM.py  test.py  tg_bot_echo_func.py  tg_bot_keyboard_n_button_reply.py  tg_bot_replykeyboard.py  tg_bot_set_command_func.py  tg_bot_web_app.py  version 1.markdown  web_app.html  working_plan.md
.github/workflows/: CICD study.md  lambda_deployment.yaml
Docker/: docker-compose.yml  docker_tutorial.md  dockerfile.flask_test  dockerfile.streamlit  dockerfile.streamlit_trial  dockerfile.test
Webhook_version/: main.py  output.txt  setup webhook tutorial.md  supabase draft.ipynb  telegram api notes.md  test.ipynb
Webhook_version/Ngrok/: main(deepseek).py  (+2 more)
data/: money_manager_database.db
draft/: telegram_with_LLM.py  tg_bot_set_command_func.py
main/: config.py  database.py  handler.py  main.py  money_manager_bot.py  test.py
scr/: app copy.py  app.py  callback_manager.py  command_manager.py  config.py  custom_logger.py  llm_tools.py  main.py  supabase_api.py  telegram_api.py  utils.py
tmp/: Examples.txt  Log Transaction Deletions.txt  Log Transaction Inserts.txt  Log Transaction Updates.txt  Reset Table Data.txt  User Management and Transactions.txt
(+38 files in other folders)
