[project]
name = "telegram-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "langchain-deepseek>=0.1.4",
    "langchain-gemini>=0.1.1",
    "langchain-perplexity>=0.1.2",
    "openai>=1.97.1",
    "plotly>=6.2.0",
    "propcache>=0.3.2",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-dotenv>=1.1.1",
    "python-telegram>=0.19.0",
    "streamlit>=1.47.0",
    "supabase>=2.17.0",
    "tqdm>=4.67.1",
]
